<resources>
    <string name="app_name">SocialLogin</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">1483508201978567</string>
    <!--<string name="facebook_app_id">563728850423908</string>-->


    //login activity
    <string name="btn_login">Login</string>
    <string name="btn_signup">Register</string>
    <string name="btn_facebook_login">Facebook Login</string>
    <string name="btn_google_login">Google+ Login</string>

    //main menu fragment
    <string name="btn_online_practice_test">Online Practice Test</string>
    <string name="btn_notification">Notifications</string>
    <string name="btn_about_us">About Us</string>
    <string name="btn_contact_us">Contact Us</string>

    // activity main menu
    <string name="option">Options</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google+</string>
    <string name="twitter">Twitter</string>
    <string name="website">Website</string>
    <string name="phone_no">Phone Number</string>
    <string name="share_app">Share App</string>
    <string name="logout">Logout</string>

    // login activity
    <string name="username">Username</string>
    <string name="password">Password</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //question fragment
    <string name="test_header">Test Header</string>
    <string name="question_no">1 of 60</string>
    <string name="answer_option_one">Option 1</string>
    <string name="answer_option_two">Option 2</string>
    <string name="answer_option_three">Option 3</string>
    <string name="answer_option_four">Option 4</string>
    <string name="next">Next</string>
    <string name="hint">Hint</string>
    <string name="demo_questoin">Question 1 - what was the strengh of rss in 2014 ?</string>

    // result fragment
    <string name="result">Result</string>
    <string name="right_answer">Right Answers - 20</string>
    <string name="wrong_answers">Wrong Answers - 40</string>
    <string name="main_menu">Main Menu</string>


    // about us
    <string name="about_us">About Us</string>
    <string name="about_us_message"> We are a growing and committed team of orthoproners who can work on the ideas,
        dedicated to excellence in technical care, research and developement. </string>

    //contact us
    <string name="contact_us">Contact Us</string>
    <string name="contact_hint_msg">contact us on our official website www.test.com \n
    or wirite to us at mail.test.com \n or you can reach us at 1800 205 123</string>

    <string name="notification_msg">notificaton message</string>
    <string name="empty_error">field can\'t be empty</string>
    <string name="invalid_email">Invalid email</string>

    <string name="error_message_no_internet_connection">No internet connection found.</string>

    <string name="general_error">empty not allowed</string>

    <string-array name="array_test">
        <item>Test 1</item>
        <item>Test 2</item>
        <item>Test 3</item>
        <item>Test 4</item>
        <item>Test 5</item>
    </string-array>

    <string-array name="array_level">
        <item>Level 1</item>
        <item>Level 2</item>
        <item>Level 3</item>
        <item>Level 4</item>
        <item>Level 5</item>
    </string-array>
</resources>
