<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">

        <Button
            android:id="@+id/btn_online_practice_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_online_practice_test"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btn_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_notification"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btn_about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_about_us"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btn_contact_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_contact_us"
            android:layout_marginTop="10dp"/>



    </LinearLayout>

</RelativeLayout>