<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.amitrai.sociallogin.fragments.ResultFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/result"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/md_black_1000"/>

        <TextView
            android:id="@+id/txt_right_anwers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/right_answer"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/md_black_1000"/>

        <TextView
            android:id="@+id/txt_wrong_answers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/wrong_answers"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/md_black_1000"/>


        <Button
            android:id="@+id/id_main_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/main_menu"
            android:layout_margin="20dp"
            android:gravity="center"
            android:layout_gravity="center"/>

    </LinearLayout>
</RelativeLayout>
